--- a/lottery-smart-contract/package.json
+++ b/lottery-smart-contract/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "mocha" // Change the test to mocha.
+    "test": "mocha"
   },
   "author": "",
   "license": "ISC",
